// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Menu
    allowedGPS={true}
    favoriteOrder="nothing"
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    timeFormat="minutes"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Feedback
          close={[Function]}
          visible={false}
        />,
        <ScrollView>
          <ImageBackground
            source={
              Object {
                "uri": "https://www.w3schools.com/css/img_fjords.jpg",
              }
            }
            style={
              Object {
                "height": 120,
                "width": 225,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgba(255,255,255,0.7)",
                  "flex": 1,
                }
              }
            />
          </ImageBackground>
          <ListHeading
            text="Konto"
          />
          <ListItem
            icon="ios-person"
            iconVisible={true}
            pressItem={[Function]}
            text="Profil"
          />
          <ListItem
            icon="ios-settings"
            iconVisible={true}
            pressItem={[Function]}
            text="Inställningar"
          />
          <View
            style={
              Object {
                "marginBottom": 10,
              }
            }
          />
          <ListHeading
            text="Åtgärder"
          />
          <ListItem
            icon="ios-mail-outline"
            iconVisible={true}
            pressItem={[Function]}
            style={
              Object {
                "marginTop": 10,
              }
            }
            text="Lämna feedback"
          />
          <ListItem
            icon="ios-exit-outline"
            iconVisible={true}
            pressItem={[Function]}
            text="Logga ut"
          />
        </ScrollView>,
      ],
      "style": Object {
        "backgroundColor": "#EAE9EF",
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "close": [Function],
          "visible": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <ImageBackground
              source={
                Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                }
              }
              style={
                Object {
                  "height": 120,
                  "width": 225,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />
            </ImageBackground>,
            <ListHeading
              text="Konto"
            />,
            <ListItem
              icon="ios-person"
              iconVisible={true}
              pressItem={[Function]}
              text="Profil"
            />,
            <ListItem
              icon="ios-settings"
              iconVisible={true}
              pressItem={[Function]}
              text="Inställningar"
            />,
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            />,
            <ListHeading
              text="Åtgärder"
            />,
            <ListItem
              icon="ios-mail-outline"
              iconVisible={true}
              pressItem={[Function]}
              style={
                Object {
                  "marginTop": 10,
                }
              }
              text="Lämna feedback"
            />,
            <ListItem
              icon="ios-exit-outline"
              iconVisible={true}
              pressItem={[Function]}
              text="Logga ut"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />,
              "source": Object {
                "uri": "https://www.w3schools.com/css/img_fjords.jpg",
              },
              "style": Object {
                "height": 120,
                "width": 225,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "style": Object {
                  "backgroundColor": "rgba(255,255,255,0.7)",
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Konto",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "ios-person",
              "iconVisible": true,
              "pressItem": [Function],
              "text": "Profil",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "ios-settings",
              "iconVisible": true,
              "pressItem": [Function],
              "text": "Inställningar",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "style": Object {
                "marginBottom": 10,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Åtgärder",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "ios-mail-outline",
              "iconVisible": true,
              "pressItem": [Function],
              "style": Object {
                "marginTop": 10,
              },
              "text": "Lämna feedback",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "ios-exit-outline",
              "iconVisible": true,
              "pressItem": [Function],
              "text": "Logga ut",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Feedback
            close={[Function]}
            visible={false}
          />,
          <ScrollView>
            <ImageBackground
              source={
                Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                }
              }
              style={
                Object {
                  "height": 120,
                  "width": 225,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />
            </ImageBackground>
            <ListHeading
              text="Konto"
            />
            <ListItem
              icon="ios-person"
              iconVisible={true}
              pressItem={[Function]}
              text="Profil"
            />
            <ListItem
              icon="ios-settings"
              iconVisible={true}
              pressItem={[Function]}
              text="Inställningar"
            />
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            />
            <ListHeading
              text="Åtgärder"
            />
            <ListItem
              icon="ios-mail-outline"
              iconVisible={true}
              pressItem={[Function]}
              style={
                Object {
                  "marginTop": 10,
                }
              }
              text="Lämna feedback"
            />
            <ListItem
              icon="ios-exit-outline"
              iconVisible={true}
              pressItem={[Function]}
              text="Logga ut"
            />
          </ScrollView>,
        ],
        "style": Object {
          "backgroundColor": "#EAE9EF",
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "close": [Function],
            "visible": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <ImageBackground
                source={
                  Object {
                    "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                  }
                }
                style={
                  Object {
                    "height": 120,
                    "width": 225,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "rgba(255,255,255,0.7)",
                      "flex": 1,
                    }
                  }
                />
              </ImageBackground>,
              <ListHeading
                text="Konto"
              />,
              <ListItem
                icon="ios-person"
                iconVisible={true}
                pressItem={[Function]}
                text="Profil"
              />,
              <ListItem
                icon="ios-settings"
                iconVisible={true}
                pressItem={[Function]}
                text="Inställningar"
              />,
              <View
                style={
                  Object {
                    "marginBottom": 10,
                  }
                }
              />,
              <ListHeading
                text="Åtgärder"
              />,
              <ListItem
                icon="ios-mail-outline"
                iconVisible={true}
                pressItem={[Function]}
                style={
                  Object {
                    "marginTop": 10,
                  }
                }
                text="Lämna feedback"
              />,
              <ListItem
                icon="ios-exit-outline"
                iconVisible={true}
                pressItem={[Function]}
                text="Logga ut"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <View
                  style={
                    Object {
                      "backgroundColor": "rgba(255,255,255,0.7)",
                      "flex": 1,
                    }
                  }
                />,
                "source": Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                },
                "style": Object {
                  "height": 120,
                  "width": 225,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "style": Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "Konto",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "ios-person",
                "iconVisible": true,
                "pressItem": [Function],
                "text": "Profil",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "ios-settings",
                "iconVisible": true,
                "pressItem": [Function],
                "text": "Inställningar",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "style": Object {
                  "marginBottom": 10,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "Åtgärder",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "ios-mail-outline",
                "iconVisible": true,
                "pressItem": [Function],
                "style": Object {
                  "marginTop": 10,
                },
                "text": "Lämna feedback",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "ios-exit-outline",
                "iconVisible": true,
                "pressItem": [Function],
                "text": "Logga ut",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should match snapshot if anonymous 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Menu
    allowedGPS={true}
    favoriteOrder="nothing"
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    timeFormat="minutes"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Feedback
          close={[Function]}
          visible={false}
        />,
        <ScrollView>
          <ImageBackground
            source={
              Object {
                "uri": "https://www.w3schools.com/css/img_fjords.jpg",
              }
            }
            style={
              Object {
                "height": 120,
                "width": 225,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgba(255,255,255,0.7)",
                  "flex": 1,
                }
              }
            />
          </ImageBackground>
          <ListHeading
            text="Konto"
          />
          <ListItem
            icon="ios-settings"
            iconVisible={true}
            pressItem={[Function]}
            text="Inställningar"
          />
          <View
            style={
              Object {
                "marginBottom": 10,
              }
            }
          />
          <ListHeading
            text="Åtgärder"
          />
          <ListItem
            icon="ios-mail-outline"
            iconVisible={true}
            pressItem={[Function]}
            style={
              Object {
                "marginTop": 10,
              }
            }
            text="Lämna feedback"
          />
          <View>
            <ListItem
              icon="ios-log-in-outline"
              iconVisible={true}
              pressItem={[Function]}
              text="Logga in"
            />
            <ListItem
              icon="ios-log-in-outline"
              iconVisible={true}
              pressItem={[Function]}
              text="Registrera"
            />
          </View>
        </ScrollView>,
      ],
      "style": Object {
        "backgroundColor": "#EAE9EF",
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "close": [Function],
          "visible": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <ImageBackground
              source={
                Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                }
              }
              style={
                Object {
                  "height": 120,
                  "width": 225,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />
            </ImageBackground>,
            <ListHeading
              text="Konto"
            />,
            null,
            <ListItem
              icon="ios-settings"
              iconVisible={true}
              pressItem={[Function]}
              text="Inställningar"
            />,
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            />,
            <ListHeading
              text="Åtgärder"
            />,
            <ListItem
              icon="ios-mail-outline"
              iconVisible={true}
              pressItem={[Function]}
              style={
                Object {
                  "marginTop": 10,
                }
              }
              text="Lämna feedback"
            />,
            <View>
              <ListItem
                icon="ios-log-in-outline"
                iconVisible={true}
                pressItem={[Function]}
                text="Logga in"
              />
              <ListItem
                icon="ios-log-in-outline"
                iconVisible={true}
                pressItem={[Function]}
                text="Registrera"
              />
            </View>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />,
              "source": Object {
                "uri": "https://www.w3schools.com/css/img_fjords.jpg",
              },
              "style": Object {
                "height": 120,
                "width": 225,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "style": Object {
                  "backgroundColor": "rgba(255,255,255,0.7)",
                  "flex": 1,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Konto",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "ios-settings",
              "iconVisible": true,
              "pressItem": [Function],
              "text": "Inställningar",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "style": Object {
                "marginBottom": 10,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Åtgärder",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "ios-mail-outline",
              "iconVisible": true,
              "pressItem": [Function],
              "style": Object {
                "marginTop": 10,
              },
              "text": "Lämna feedback",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <ListItem
                  icon="ios-log-in-outline"
                  iconVisible={true}
                  pressItem={[Function]}
                  text="Logga in"
                />,
                <ListItem
                  icon="ios-log-in-outline"
                  iconVisible={true}
                  pressItem={[Function]}
                  text="Registrera"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "icon": "ios-log-in-outline",
                  "iconVisible": true,
                  "pressItem": [Function],
                  "text": "Logga in",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "icon": "ios-log-in-outline",
                  "iconVisible": true,
                  "pressItem": [Function],
                  "text": "Registrera",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Feedback
            close={[Function]}
            visible={false}
          />,
          <ScrollView>
            <ImageBackground
              source={
                Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                }
              }
              style={
                Object {
                  "height": 120,
                  "width": 225,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  }
                }
              />
            </ImageBackground>
            <ListHeading
              text="Konto"
            />
            <ListItem
              icon="ios-settings"
              iconVisible={true}
              pressItem={[Function]}
              text="Inställningar"
            />
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            />
            <ListHeading
              text="Åtgärder"
            />
            <ListItem
              icon="ios-mail-outline"
              iconVisible={true}
              pressItem={[Function]}
              style={
                Object {
                  "marginTop": 10,
                }
              }
              text="Lämna feedback"
            />
            <View>
              <ListItem
                icon="ios-log-in-outline"
                iconVisible={true}
                pressItem={[Function]}
                text="Logga in"
              />
              <ListItem
                icon="ios-log-in-outline"
                iconVisible={true}
                pressItem={[Function]}
                text="Registrera"
              />
            </View>
          </ScrollView>,
        ],
        "style": Object {
          "backgroundColor": "#EAE9EF",
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "close": [Function],
            "visible": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <ImageBackground
                source={
                  Object {
                    "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                  }
                }
                style={
                  Object {
                    "height": 120,
                    "width": 225,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "rgba(255,255,255,0.7)",
                      "flex": 1,
                    }
                  }
                />
              </ImageBackground>,
              <ListHeading
                text="Konto"
              />,
              null,
              <ListItem
                icon="ios-settings"
                iconVisible={true}
                pressItem={[Function]}
                text="Inställningar"
              />,
              <View
                style={
                  Object {
                    "marginBottom": 10,
                  }
                }
              />,
              <ListHeading
                text="Åtgärder"
              />,
              <ListItem
                icon="ios-mail-outline"
                iconVisible={true}
                pressItem={[Function]}
                style={
                  Object {
                    "marginTop": 10,
                  }
                }
                text="Lämna feedback"
              />,
              <View>
                <ListItem
                  icon="ios-log-in-outline"
                  iconVisible={true}
                  pressItem={[Function]}
                  text="Logga in"
                />
                <ListItem
                  icon="ios-log-in-outline"
                  iconVisible={true}
                  pressItem={[Function]}
                  text="Registrera"
                />
              </View>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <View
                  style={
                    Object {
                      "backgroundColor": "rgba(255,255,255,0.7)",
                      "flex": 1,
                    }
                  }
                />,
                "source": Object {
                  "uri": "https://www.w3schools.com/css/img_fjords.jpg",
                },
                "style": Object {
                  "height": 120,
                  "width": 225,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "style": Object {
                    "backgroundColor": "rgba(255,255,255,0.7)",
                    "flex": 1,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "Konto",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "ios-settings",
                "iconVisible": true,
                "pressItem": [Function],
                "text": "Inställningar",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "style": Object {
                  "marginBottom": 10,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "Åtgärder",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "ios-mail-outline",
                "iconVisible": true,
                "pressItem": [Function],
                "style": Object {
                  "marginTop": 10,
                },
                "text": "Lämna feedback",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <ListItem
                    icon="ios-log-in-outline"
                    iconVisible={true}
                    pressItem={[Function]}
                    text="Logga in"
                  />,
                  <ListItem
                    icon="ios-log-in-outline"
                    iconVisible={true}
                    pressItem={[Function]}
                    text="Registrera"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "icon": "ios-log-in-outline",
                    "iconVisible": true,
                    "pressItem": [Function],
                    "text": "Logga in",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "icon": "ios-log-in-outline",
                    "iconVisible": true,
                    "pressItem": [Function],
                    "text": "Registrera",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
